--- a/smartRepeater/app/src/main/res/values/strings.xml
+++ b/smartRepeater/app/src/main/res/values/strings.xml
@@ -1,5 +1,5 @@
 <resources>
-    <string name="app_name">smartRepeater</string>
+    <string name="app_name">SmartRepeater</string>
     <string name="navigation_drawer_open">Open navigation drawer</string>
     <string name="navigation_drawer_close">Close navigation drawer</string>
     <string name="nav_header_title">UNISOC WCN BT</string>
